--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,17 @@
+a.content-link {
+	border-bottom: 2px solid;
+	color: #111111;
+	font-size: 30px;
+	font-weight: 300;
+	line-height: 46px;
+  text-decoration: none;
+}
+a.content-link:hover{
+	border-bottom: 2px solid;
+	color: #111111;
+	font-weight: 400;
+	text-decoration: none;
+}
 a.mdl-button {
 	font-size: 34px;
 	height: 68px;
@@ -17,6 +31,11 @@ div.mdl-card__supporting-text {
 }
 form, form div, .form-group div.mdl-textfield{
 	width: 100%;
+}
+i.material-icons {
+	font-size: 48px;
+	margin-right: 5px;
+	vertical-align: middle;
 }
 input[type="submit"] {
 	font-size: 34px;
@@ -48,9 +67,6 @@ ul {
   font-size: 30px;
   line-height: 35px;
 }
-.bottom-margin-30 {
-	margin-bottom: 30px;
-}
 .container {
 	margin: 25px 0px;
 }
@@ -60,22 +76,24 @@ ul {
 .logo-icon {
 	width: 100%;
 }
-i.material-icons {
-	font-size: 48px;
-	margin-right: 5px;
-	vertical-align: middle;
-}
 .material-icons.error {
 	color: #ff6e40;
 }
 .material-icons.success {
 	color: #8bc34a;
 }
+.row{
+	margin-bottom: 20px;
+}
 #forgot_password_div {
 	font-size: 27px;
   line-height: 28px;
   padding: 15px 0px;
   text-align: right;
+}
+#main-nav {
+	font-size: 23px;
+	text-align: center;
 }
 /************************************************
 
