--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New league</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', leagues_path %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">Create new league</h2>
+		</div>
+			<%= render 'form' %>
+	</div>
+</div>
