--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New team</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', league_teams_path(params[:league_id]) %>
+<% @league = League.find_by_id(params[:league_id]) %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">
+				<%= link_to @league.name, league_path(@league), class: "content-link" %>
+        <span>&nbsp;new team</span>
+			</h2>
+		</div>
+			<%= render 'form' %>
+	</div>
+</div>
