--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -47,6 +47,7 @@
     </div>
     <div class="form-group">
       <%= f.submit "Sign Up", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+      <%= link_to "Cancel", root_path, class: "cancel_link_anchor" %>
     </div>
   </div>
 <% end %>
