--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,26 +1,46 @@
 <% league = League.find(params[:league_id]) %>
 <%= form_for([league, @contract]) do |f| %>
   <% if @contract.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contract.errors.count, "error") %> prohibited this contract from being saved:</h2>
+    <div class="mdl-card__supporting-text">
+      Please address the <%= "error".pluralize(@contract.errors.count) %> and try again:
+    </div>
+    <div>
       <ul>
         <% @contract.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li>
+            <i class="material-icons error">face</i>
+            <%= message %>
+          </li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="actions">
-    <% @players_in_this_league = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) %>
-    <%= f.collection_select(:player_id, Player.where.not(id:@players_in_this_league.map(&:id)), :id, "#{:full_name}") %>
-    <%= f.label :weekly_salary_cents %>
-    <%= f.number_field :weekly_salary_cents %>
-    <br/>
+  <div class="mdl-card__actions">
+    <div class="form-group">
+      <div class="selectdiv">
+        <% @players_in_this_league = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) %>
+        <%= f.collection_select(:player_id, Player.where.not(id:@players_in_this_league.map(&:id)), :id, "#{:full_name}") %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <%= f.text_field :weekly_salary_cents, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+        <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
+        <span class="mdl-textfield__error">Invalid salary.</span>
+      </div>
+    </div>
     <%= f.hidden_field :starts_at, :value => Date.today %>
-    <%= f.label :ends_at %>
-    <%= f.date_field :ends_at %>
     <%= f.hidden_field :team_id, :value => @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first.id %>
-    <%= f.submit %>
+    <div class="form-group">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
+        <%= f.label :ends_at, class: "mdl-textfield__label" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Offer contract", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+      <%= link_to "Cancel", league_contracts_path(league), class: "cancel_link_anchor" %>
+    </div>
   </div>
 <% end %>
