--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -1,21 +1,35 @@
 <%= form_for(@league) do |f| %>
   <% if @league.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@league.errors.count, "error") %> prohibited this league from being saved:</h2>
-
+    <div class="mdl-card__supporting-text">
+      Please address the <%= "error".pluralize(@league.errors.count) %> and try again:
+    </div>
+    <div>
       <ul>
         <% @league.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+          <li>
+            <i class="material-icons error">face</i>
+            <%= message %>
+          </li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.text_field :name %>
-    <%= f.collection_select :competition_id, Competition.all, :id, :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="mdl-card__actions">
+    <div class="form-group">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <%= f.text_field :name, class: "mdl-textfield__input" %>
+        <%= f.label :name, "League name", class: "mdl-textfield__label" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="selectdiv">
+        <%= f.collection_select :competition_id, Competition.all, :id, :description %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Create", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+      <%= link_to "Cancel", leagues_path, class: "cancel_link_anchor" %>
+    </div>
   </div>
 <% end %>
