--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -16,6 +16,7 @@
 			</div>
 			<div class="form-group">
 				<%= submit_tag "Reset password", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+				<%= link_to "Cancel", root_path, class: "cancel_link_anchor" %>
 			</div>
 		<% end %>
 	  </div>
