--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -1,23 +1,47 @@
-<div class="container">
-	<span class="sub_header">First team</span>
-	<ul class="first_team_players">
-		<% squad_position_whtelist = @team.get_squad_position_whitelist %>
-		<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
-			<li id="<%= dom_id(team_player) %>">
-				(<%= team_player.squad_position.short_name %>)
-				<%= link_to team_player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents / 100) %>)
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+	<tr>
+		<th class="mdl-data-table__cell--non-numeric">
+			<span>Pos</span>
+		</th>
+		<th class="mdl-data-table__cell--non-numeric">
+			<span>Name</span>
+		</th>
+		<th>
+			<span>Salary</span>
+		</th>
+		<th class="mdl-data-table__cell--non-numeric">
+			<span> </span>
+		</th>
+	</tr>
+	<% squad_position_whtelist = @team.get_squad_position_whitelist %>
+	<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
+		<tr id="<%= dom_id(team_player) %>">
+			<td class="mdl-data-table__cell--non-numeric normal-text">
+				<%= team_player.squad_position.short_name %>
+			</td>
+			<td class="mdl-data-table__cell--non-numeric normal-text">
+				<%= link_to team_player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player), class: "content-link" %>
+			</td>
+			<td class="normal-text">
+				<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %>
+			</td>
+			<td class="mdl-data-table__cell--non-numeric normal-text">
 				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
-					<%= f.submit "Remove from first team." %>
+					<%= f.submit "Remove from first team.", class: "negative_action" %>
 				<% end %>
-			</li>
-		<% end %>
-	</ul>
+			</td>
+		</tr>
+	<% end %>
+</table>
 
+
+
+<div class="container">
 	<span class="sub_header">Squad players</span>
 	<ul class="squad_players">
 		<% @team.team_players.where(first_team: false).find_each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
-				<%= link_to team_player.player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents / 100, precision: 0) %> per week until <%= team_player.current_contract.ends_at.strftime('%d-%b-%Y') %>)
+				<%= link_to team_player.player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %> per week until <%= team_player.current_contract.ends_at.strftime('%d-%b-%Y') %>)
 				<% first_team_players = @team.team_players.where(first_team: true) %>
 				<% if first_team_players.count < 11 %>
 					<% if team_player.player.playing_position != 'Goalkeeper' || first_team_players.joins(:squad_position).where('squad_positions.short_name = ?', 'GK').count === 0 %>
@@ -30,4 +54,4 @@
 			</li>
 		<% end %>
 	</ul>
-<div>
+</div>
