--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,27 +1,41 @@
-<%= form_for ([League.find(params[:league_id]), @team]) do |f| %>
+<% league = League.find(params[:league_id]) %>
+<%= form_for ([league, @team]) do |f| %>
   <% if @team.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@team.errors.count, "error") %> prohibited this team from being saved:</h2>
-
+    <div class="mdl-card__supporting-text">
+      Please address the <%= "error".pluralize(@team.errors.count) %> and try again:
+    </div>
+    <div>
       <ul>
-      <% @team.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @team.errors.full_messages.each do |message| %>
+          <li>
+            <i class="material-icons error">face</i>
+            <%= message %>
+          </li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="mdl-card__actions">
+    <div class="form-group">
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <%= f.text_field :title, class: "mdl-textfield__input" %>
+        <%= f.label :title, "Team name", class: "mdl-textfield__label" %>
+      </div>
+    </div>
     <%= f.hidden_field :cash_balance_cents, :value => 2000000000 %>
     <%= f.fields_for :stadium do |ff| %>
-      <%= ff.label "Stadium name" %>
-      <%= ff.text_field :name %>
+      <div class="form-group">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"> 
+          <%= ff.text_field :name, class: "mdl-textfield__input" %>
+          <%= ff.label :name, "Stadium name", class: "mdl-textfield__label" %>
+        </div>
+      </div>
       <%= ff.hidden_field :capacity, :value => 20000 %>
     <% end %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+    <div class="form-group">
+      <%= f.submit class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+      <%= link_to "Cancel", league_path(league), class: "cancel_link_anchor" %>
+    </div>
   </div>
 <% end %>
