--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,14 +1,20 @@
-<span class="main_header">
-	<%= link_to @team.league.name, league_path(@team.league) %> >> <%= @team.title %> (<%= link_to 'edit', edit_league_team_path(@team.league, @team) %>)
-</span>
-<br/>
-<span>
-	<% if current_game_week = GameWeek.get_current_game_week %>
-		Current game week is <%= current_game_week.starts_at.strftime("%a %d-%b-%Y") %> - <%= current_game_week.ends_at.strftime("%a %d-%b-%Y") %>
-	<% else %>
-		No current game week
-	<% end %>
-</span>
-<br/>
-<span><%= number_to_currency(@team.cash_balance_cents / 100, precision: 0) %></span>
-<%= render partial: "shared/team_players" %>
+<div class="row">
+	<div class="col-sm-12">
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__title">
+        <h2 class="mdl-card__title-text"><%= @team.title %></h2>
+      </div>
+			<div class="mdl-card__supporting-text">
+				Team budget: <%= number_to_currency(@team.cash_balance_cents / 100, precision: 0) %>
+			</div>
+			<div class="mdl-card__actions">
+				<%= render partial: "shared/team_players" %>
+			</div>
+			<div class="mdl-card__supporting-text">
+				<ul class="horizontal-style">
+					<li><%= link_to 'Edit team', edit_league_team_path(@team.league, @team), class: "mdl-button--primary" %></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
