--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,4 +1,5 @@
 <% league = League.find(params[:league_id]) %>
+<% team = @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first %>
 <%= form_for([league, @contract]) do |f| %>
   <% if @contract.errors.any? %>
     <div class="mdl-card__supporting-text">
@@ -19,8 +20,9 @@
   <div class="mdl-card__actions">
     <div class="form-group">
       <div class="selectdiv">
-        <% @players_in_this_league = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) %>
-        <%= f.collection_select(:player_id, Player.where.not(id:@players_in_this_league.map(&:id)), :id, "#{:full_name}") %>
+        <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
+
+        <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name}") %>
       </div>
     </div>
     <div class="form-group">
@@ -31,7 +33,7 @@
       </div>
     </div>
     <%= f.hidden_field :starts_at, :value => Date.today %>
-    <%= f.hidden_field :team_id, :value => @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first.id %>
+    <%= f.hidden_field :team_id, :value => team.id %>
     <div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
