Restrict contracts to one per player per team

--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -20,9 +20,11 @@
   <div class="mdl-card__actions">
     <div class="form-group">
       <div class="selectdiv">
-        <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
+        <% if !@contract.id %>
+          <% @players_to_exlcude = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id) %>
 
-        <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name}") %>
+          <%= f.collection_select(:player_id, Player.where.not(id:@players_to_exlcude.map(&:id)).sort_by {|p| [p.last_name.downcase, p.first_name.downcase] }, :id, "#{:full_name}") %>
+        <% end %>
       </div>
     </div>
     <div class="form-group">
