--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,2 +1,8 @@
-<span class="main_header"><%= link_to @team.league.name, league_path(@team.league) %> >> <%= link_to @team.title, league_team_path(@team.league, @team) %> >> edit</span>
-<%= render 'form' %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">Edit team</h2>
+		</div>
+			<%= render 'form' %>
+	</div>
+</div>
